# QrReader

./: build.gradle  gradle.properties  qr.jks  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/androidTest/java/com/qr/myqr/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/qr/myqr/: App.kt  HF.kt  _ext.kt
app/src/main/java/com/qr/myqr/basic/: AnimatorListener.kt  BaseApp.kt  BaseCompatActivity.kt  BaseFragment.kt  BaseInputFragment.kt  BasePage.kt
app/src/main/java/com/qr/myqr/create/: CreateActivity.kt  CreateResultActivity.kt  InputContent.kt  InputTextFragment.kt  PhoneFragment.kt  UrlFragment.kt  WiFiInputFragment.kt
app/src/main/java/com/qr/myqr/data/: AppCache.kt  FirebaseEvent.kt  OneDayCache.kt  RemoteConfig.kt  StartupProvider.kt  StartupReceiver.kt
app/src/main/java/com/qr/myqr/db/: CreateEntity.kt  DaoCreate.kt  DaoScan.kt  RoomImpl.kt  ScanEntity.kt
app/src/main/java/com/qr/myqr/history/: CreateFragment.kt  HistoryActivity.kt  HistoryAdapter.kt  HistoryUiBean.kt  PagerViewAdapter.kt  ScanFragment.kt
app/src/main/java/com/qr/myqr/main/: MainActivity.kt  MainAdapter.kt
app/src/main/java/com/qr/myqr/page/: ExchangeActivity.kt  FirstActivity.kt
app/src/main/java/com/qr/myqr/pop/: PopActivity.kt  PopManager.kt  SelfRenderActivity.kt
app/src/main/java/com/qr/myqr/revenue/: AdPos.java  AdsListener.kt  AdsLoader.kt  SelfRenderViewUtil.java
app/src/main/java/com/qr/myqr/scan/: ScannerResultActivity.kt  ScanningActivity.kt
app/src/main/java/com/qr/myqr/tools/: NetUtils.java  PermissionHelper.kt  ShareUtils.kt
app/src/main/res/drawable/: check_draw_16.xml  history_check_left.xml  history_check_right.xml  history_check_text.xml  layer_progress.xml  rect_0096fc_r16.xml  rect_0096fc_r21.xml  rect_dbdbdb_r12.xml  rect_ffffff_r16.xml
app/src/main/res/layout/: activity_create_qr.xml  activity_create_result.xml  activity_first.xml  activity_history.xml  activity_main.xml  activity_scanner_result.xml  activity_scanning.xml  activity_self_render.xml  ad_native_self.xml  ad_native_self_fullscreen.xml  fragment_input_text.xml  fragment_layout_wifi.xml  fragment_phone.xml  fragment_url.xml  item_history.xml  item_home.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: remotes_default.xml
app/src/test/java/com/qr/myqr/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
multiple/: build.gradle
multiple/src/androidTest/java/com/reader/multiple/: ExampleInstrumentedTest.kt
multiple/src/main/: AndroidManifest.xml
multiple/src/main/cpp/: CMakeLists.txt  james.cpp  multi.cpp
multiple/src/main/java/com/reader/multiple/: Multiple.java  OpenL.java
multiple/src/main/java/com/reader/multiple/a/: BlockActivityA.java  BlockActivityB.java  MvpKillerActivity.java  (+1 more)
multiple/src/main/res/xml/: d_authenticator.xml  d_syncadapter1.xml
multiple/src/test/java/com/reader/multiple/: ExampleUnitTest.kt
(+210 files in other folders)
